--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-environ = "*"
 drf-spectacular = "*"
 
 [dev-packages]
+wemake-python-styleguide = "*"
 
 [requires]
 python_version = "3.10"
