--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./src:/src
+      - .:/app
       - ./.local/sqlite:/tmp/sqlite
     restart: on-failure
     environment:
