Add schemas and versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,20 @@
 [flake8]
 show-source = True
 max_line_length = 120
-ignore = D100,D101,D102,D103,D104,D105,D106
+ignore = D100,D101,D102,D103,D104,D105,D106,WPS615
 per-file-ignores =
+    *models.py:WPS306,WPS110,WPS432
+    *serializers.py:WPS306,WPS110,WPS432
     settings.py:WPS407,WPS226
+    tests/*:S101,WPS305,WPS442
+    tests/settings.py:WPS347,F401,F403
 exclude =
     ./manage.py
     */migrations/*.py
+
+[tool.isort]
+line_length = 120
+use_parentheses = True
+
+[tool:pytest]
+DJANGO_SETTINGS_MODULE = tests.settings
