--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,12 @@ django = "*"
 djangorestframework = "*"
 django-environ = "*"
 drf-spectacular = "*"
+pytz = "*"
 
 [dev-packages]
 wemake-python-styleguide = "*"
+model-bakery = "*"
+pytest-django = "*"
 
 [requires]
 python_version = "3.10"
