Increment schema versions automatically

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ show-source = True
 max_line_length = 120
 ignore = D100,D101,D102,D103,D104,D105,D106,WPS615
 per-file-ignores =
-    *models.py:WPS306,WPS110,WPS432
+    *models.py:WPS306,WPS110,WPS432,WPS226
     *serializers.py:WPS306,WPS110,WPS432
     settings.py:WPS407,WPS226
     tests/*:S101,WPS305,WPS442
