Set up pytest-cov

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,15 @@ use_parentheses = True
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = tests.settings
+addopts =
+    --cov=schema_registry
+    --cov-report term-missing
+
+[coverage:run]
+omit =
+    */wsgi.py
+    */asgi.py
+
+[coverage:report]
+exclude_lines =
+    raise NotImplementedError
