--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pytz = "*"
 wemake-python-styleguide = "*"
 model-bakery = "*"
 pytest-django = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.10"
