Check backward compatibility when creating a new schema version

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "*"
 django-environ = "*"
 drf-spectacular = "*"
 pytz = "*"
+jsonsubschema = "*"
 
 [dev-packages]
 wemake-python-styleguide = "*"
