--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [flake8]
 show-source = True
 max_line_length = 120
-ignore = D100,D101,D102,D103,D104,D105,D106,WPS615
+ignore = D100,D101,D102,D103,D104,D105,D106,WPS615,WPS431,WPS604,WPS420
 per-file-ignores =
     *models.py:WPS306,WPS110,WPS432,WPS226
     *serializers.py:WPS306,WPS110,WPS432
     settings.py:WPS407,WPS226
-    tests/*:S101,WPS305,WPS442
+    tests/*:S101,WPS305,WPS442,WPS226
     tests/settings.py:WPS347,F401,F403
 exclude =
     ./manage.py
