--- a/setup.cfg
+++ b/setup.cfg
@@ -30,3 +30,15 @@ omit =
 [coverage:report]
 exclude_lines =
     raise NotImplementedError
+
+[mypy]
+ignore_missing_imports = True
+plugins =
+  mypy_django_plugin.main,
+  mypy_drf_plugin.main
+
+[mypy.plugins.django-stubs]
+django_settings_module = tests.settings
+
+[mypy-*.migrations.*]
+ignore_errors = True
