--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Test
 on: push
 jobs:
   test:
@@ -9,5 +9,7 @@ jobs:
         run: docker compose build web
       - name: flake8
         run: docker compose run --rm web flake8
+      - name: mypy
+        run: docker compose run --rm web mypy schema_registry
       - name: pytest
         run: docker compose run --rm web pytest
