--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,9 @@ wemake-python-styleguide = "*"
 model-bakery = "*"
 pytest-django = "*"
 pytest-cov = "*"
+mypy = "*"
+django-stubs = "*"
+djangorestframework-stubs = "*"
 
 [requires]
 python_version = "3.10"
