--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ drf-spectacular = "*"
 pytz = "*"
 jsonsubschema = "*"
 psycopg2 = "*"
+django-storages = {extras = ["google"], version = "*"}
 
 [dev-packages]
 wemake-python-styleguide = "*"
