--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,12 +23,30 @@ steps:
         /buildstep/execute.sh 
         -i $_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA 
         -s $PROJECT_ID:$_DEPLOY_REGION:$_SERVICE_NAME 
-        -e GS_BUCKET_NAME=shift-dev-1_schema-registry-static  
+        -e GS_BUCKET_NAME=schema-registry-static  
         -e SECRET_KEY=$$SECRET_KEY 
         -e DATABASE_URL=$$DATABASE_URL 
         -- 
         python manage.py migrate
     id: Apply migrations
+    entrypoint: bash
+    secretEnv:
+      - DATABASE_URL
+      - SECRET_KEY
+  - name: gcr.io/google-appengine/exec-wrapper
+    args:
+      - '-c'
+      - >
+        /buildstep/execute.sh 
+        -i $_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA 
+        -s $PROJECT_ID:$_DEPLOY_REGION:$_SERVICE_NAME 
+        -e GS_BUCKET_NAME=schema-registry-static  
+        -e SECRET_KEY=$$SECRET_KEY 
+        -e DATABASE_URL=$$DATABASE_URL 
+        -e 
+        -- 
+        python manage.py collectstatic --verbosity 2 --no-input
+    id: Collect static
     entrypoint: bash
     secretEnv:
       - DATABASE_URL
