--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 show-source = True
 max_line_length = 120
-ignore = D100,D101,D102,D103,D104,D105,D106,WPS615,WPS431,WPS604,WPS420
+ignore = D100,D101,D102,D103,D104,D105,D106,D107,WPS615,WPS431,WPS604,WPS420,WPS306
 per-file-ignores =
     *models.py:WPS306,WPS110,WPS432,WPS226
     *serializers.py:WPS306,WPS110,WPS432
