--- a/setup.cfg
+++ b/setup.cfg
@@ -12,9 +12,12 @@ exclude =
     ./manage.py
     */migrations/*.py
 
-[tool.isort]
+[isort]
+force_sort_within_sections = true
+include_trailing_comma = true
 line_length = 120
-use_parentheses = True
+multi_line_output = 3
+use_parentheses = true
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = tests.settings
