- removed `$` considered as shell variable - bandit issues - - https://github.com/PyCQA/bandit/issues/837 - - https://github.com/wemake-services/wemake-python-styleguide/issues/2398

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     restart: on-failure
     environment:
       DEBUG: 1
-      SECRET_KEY: django-insecure-873=x2#_fm0gl*ws$xbgvmdnhqphcf6!(-+594e*2w*_^-16d=
+      SECRET_KEY: django-insecure-873=x2#_fm0gl*wsxbgvmdnhqphcf6!-+594e*2w*_^-16d=
       DATABASE_URL: sqlite:////tmp/sqlite/schema-registry.db
       GS_BUCKET_NAME: schema-registry-static
       ALLAUTH_GITLAB_URL: https://gitlab.shiftwitherin.com
