--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ ignore = D100,D101,D102,D103,D104,D105,D106,D107,WPS306,WPS420,WPS431,WPS601,WPS
 per-file-ignores =
     *models.py:WPS306,WPS110,WPS432,WPS226
     *serializers.py:WPS306,WPS110,WPS432
-    settings.py:WPS407,WPS226
+    settings.py,settings_heroku.py:WPS407,WPS226
     tests/*:S101,WPS305,WPS442,WPS226
     tests/settings.py:WPS347,F401,F403
 exclude =
