--- a/Pipfile
+++ b/Pipfile
@@ -11,9 +11,9 @@ drf-spectacular = "*"
 pytz = "*"
 jsonsubschema = "*"
 psycopg2 = "*"
-django-storages = {extras = ["google"], version = "*"}
 sentry-sdk = "*"
 django-allauth = "*"
+whitenoise = "*"
 
 [dev-packages]
 wemake-python-styleguide = "*"
